--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -3,236 +3,180 @@
   <head>
     <title>Index - Go Notes!</title>
     <link rel="icon" href="img/favicon.ico" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"
-      integrity="sha512-+AdxWMqfOdtwMuXK482e5OgHYzN06s97n3NTAeAdTlUvlIgCBx3SUKvMculJIedylDfVCaQFdD6HaojI4aeBUA=="
-      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"
-      integrity="sha512-+AdxWMqfOdtwMuXK482e5OgHYzN06s97n3NTAeAdTlUvlIgCBx3SUKvMculJIedylDfVCaQFdD6HaojI4aeBUA=="
-      crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="/assets/css/site.css" type="text/css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.js"
-      integrity="sha512-VYhOmOOgmYsSFb0oxQcqkRrm/YmAnwNcuahdvSfMaQW7JqWb9g6XUciSICYUEOd0C3N+s1fN+Kkn85q+iYsDew=="
-      crossorigin="anonymous"
+      type="text/javascript"
+      src="/assets/js/site.js"
+      charset="utf8"
     ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body class="site">
-    <div class="ui gogreen inverted menu borderless">
-      <a class="item" href="/">
-        <img class="ui mini image" src="/img/go_notes.svg" />&emsp;<b
-          >Go Notes</b
-        >
-      </a>
-    </div>
-    {{if not .Links}}
-    <div class="container site-content padded-container">
-      <div class="ui segment padded gogreen-border">
-        <div class="ui grid padded">
-          <div class="sixteen wide column center aligned">
-            <h2>Hello {{.Username}}, Welcome To Go Notes!</h2>
-            <img src="img/go_notes.svg" alt="go_notes" />
+    <header class="site-header">
+      <div class="ui gogreen inverted menu borderless">
+        <a class="item" href="/">
+          <img class="ui mini image" src="assets/img/go_notes.svg" />&emsp;<b
+            >Go Notes</b
+          >
+        </a>
+        <div class="item">
+          <div class="ui left icon input">
+            <input
+              class="input-border"
+              type="text"
+              placeholder="Name of new note..."
+              id="notename"
+              maxlength="20"
+              oninvalid="this.setCustomValidity('You must enter a note name')"
+              oninput="setCustomValidity('')"
+              onkeyup="inputKeyUp(event)"
+              required
+            />
+            <i class="sticky note outline icon gogreen"></i>
           </div>
-          <div class="ten wide column center-text" style="margin: auto">
-            <p>
-              <b class="gogreen">Go Notes</b> is a simple webserver that is
-              built in <a href="https://golang.org/">golang</a> for storing all
-              your random thoughts during the day or just a reminder to do
-              something. We are not here to do anything fancy, but maybe we will
-              reconsider in the future.
-            </p>
-            <p>
-              As you build out your collection of notes, you will see a list of
-              them populated here on the home page. You can come back here at
-              any time by clicking the <b class="gogreen">Go Notes</b> logo in
-              the top left hand corner of the application.
-            </p>
-            <p>
-              Don't worry if this screen looks different next time you come back
-              here, you've just started to get the hang of things.
-            </p>
-          </div>
-          <div class="fourteen wide column center-text" style="margin: auto">
-            <h3>Creating New Notes</h3>
-            <p>
-              Is very <b><u>easy!</u></b>
-            </p>
-            <p>
-              Follow the steps below to create your first note. You can name it
-              whatever you want.
-            </p>
-            <div class="ui bulleted list">
-              <div class="item">
-                Browse to http://localhost:4646/edit/<em><b>Name</b></em>
+        </div>
+        <div class="right menu">
+          <button class="ui gogreen-button button" type="button" id="setName">
+            {{ if eq .Username "New User" }}
+            <b>New User - Change Your Name</b>
+            {{ else }}
+            <b>{{ .Username }}</b>
+            {{ end }}
+          </button>
+          <div class="ui mini modal" id="changeName">
+            <div class="ui center aligned padded grid">
+              <div class="column">
+                <h2 class="ui center aligned gogreen header modal-header">
+                  <i class="user icon text-center"></i>
+                  <div class="content">Change Your Name</div>
+                </h2>
+                <form class="ui form form-margin" action="/" method="POST">
+                  <div class="ui segment">
+                    <div class="field">
+                      <div class="ui left icon input">
+                        <i class="user icon"></i>
+                        <input
+                          type="text"
+                          name="username"
+                          id="username"
+                          maxlength="12"
+                          placeholder="Your name..."
+                          autofocus
+                          oninvalid="this.setCustomValidity('Please enter a value')"
+                          oninput="setCustomValidity('')"
+                          required
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
-              <div class="item">
-                Fill in the information for your note and click <b>Save</b>
-              </div>
-              <div class="item">You have created your first note!</div>
             </div>
           </div>
-          <div class="fourteen wide column center-text" style="margin: auto">
-            {{ if eq .Username "User" }}
-            <h3>Tell Us Your Name</h3>
-            <p>
-              Let's get to know each other better so that you can be personally
-              greeted next time you come back. You are coming back, right?
-            </p>
-            {{ else }}
-            <h3>Want To Change Your Name?</h3>
-            <p>
-              {{ .Username }}, you came back! We're so happy, we love working
-              with you. For whatever the reason, as always, if you're unhappy
-              with your current name, you can set it below.
-            </p>
-            {{ end }}
-          </div>
-          <div class="eight wide column centered grid center-text">
-            <form class="ui form" action="/" method="POST">
-              {{ if .Errors.Username }}
-              <div class="sixteen wide field error">
-                <label for="username">Your Name</label>
-                <input
-                  type="text"
-                  id="username"
-                  name="username"
-                  maxlength="12"
-                />
-                <p class="error">{{ .Errors.Username }}</p>
-              </div>
-              {{ else }}
-              <div class="sixteen wide field">
-                <label for="username">Your Name</label>
-                <input
-                  type="text"
-                  id="username"
-                  name="username"
-                  maxlength="12"
-                />
-              </div>
-              {{ end }}
-            </form>
-          </div>
         </div>
       </div>
-      <div class="ui segment padded gogreen-border">
-        <div class="ui grid padded">
-          <div class="sixteen wide column center aligned">
-            <h3>You have not created any notes yet!</h3>
-            <i class="frown outline icon"></i>
-            <p></p>
-            <p>Get started by following the instructions above.</p>
+    </header>
+    <main class="site-content">
+      <div class="container site-content padded-container">
+        <div class="ui segment padded gogreen-border">
+          <div class="ui grid padded">
+            <div class="sixteen wide column center aligned">
+              {{if eq .Username "New User"}}
+              <h2>Hey, Welcome To <b class="gogreen">Go Notes!</b></h2>
+              {{else}}
+              <h2>Hey {{.Username}}, Welcome Back To Go Notes!</h2>
+              {{end}}
+              <img
+                class="splash-image"
+                src="assets/img/go_notes.svg"
+                alt="go_notes"
+              />
+            </div>
+            <div class="ten wide column center-text" style="margin: auto">
+              <p>
+                <b class="gogreen">Go Notes</b> is a simple webapp that is built
+                in
+                <a href="https://golang.org/"><b class="gogreen">golang</b></a>
+                for storing all your random notes. For now we are running with
+                plain text notes, but look out for markdown.
+              </p>
+            </div>
+            <div class="ten wide column center-text" style="margin: auto">
+              <h3>Creating New Notes</h3>
+              <p>
+                You can create a new note at any time in the
+                <a href="#notename"><b class="gogreen">menu bar</b></a>
+                or by going to
+                <a href="/edit/new-page-name"
+                  ><b class="gogreen">/edit/new-page-name</b></a
+                >
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-    {{else}}
-    <div class="container site-content padded-container">
-      <div class="ui segment padded gogreen-border">
-        <div class="ui grid padded">
-          <div class="sixteen wide column center aligned">
-            <h2>Hey {{.Username}}, Welcome Back To Go Notes!</h2>
-            <img src="img/go_notes.svg" alt="go_notes" />
-          </div>
-          <div class="ten wide column center-text" style="margin: auto">
-            <p>
-              <b class="gogreen">Go Notes</b> is a simple webserver that is
-              built in <a href="https://golang.org/">golang</a> for storing all
-              your random thoughts during the day or just a reminder to do
-              something. We are not here to do anything fancy, but maybe we will
-              reconsider in the future.
-            </p>
-          </div>
-          <div class="fourteen wide column center-text" style="margin: auto">
-            <h3>Creating New Notes</h3>
-            <p>As if you need reminding!</p>
-            <p>
-              You can create a new note at any time you like with any name you
-              desire as long as you have not already used it.
-            </p>
-            <p>
-              Add <b>/edit/<i>NewPageName</i></b> to the url you are currently
-              on.
-            </p>
-          </div>
-          <div class="fourteen wide column center-text" style="margin: auto">
-            {{ if eq .Username "User" }}
-            <h3>Tell Us Your Name</h3>
-            <p>
-              Let's get to know each other better so that you can be personally
-              greeted next time you come back. You are coming back, right?
-            </p>
-            {{ else }}
-            <h3>Want To Change Your Name?</h3>
-            <p>
-              {{ .Username }}, you came back! We're so happy, we love working
-              with you. For whatever the reason, as always, if you're unhappy
-              with your current name, you can set it below.
-            </p>
-            {{ end }}
-          </div>
-          <div class="eight wide column centered grid center-text">
-            <form class="ui form" action="/" method="POST">
-              {{ if .Errors.Username }}
-              <div class="sixteen wide field error">
-                <label for="username">Your Name</label>
-                <input
-                  type="text"
-                  id="username"
-                  name="username"
-                  maxlength="12"
-                />
-                <p class="error">{{ .Errors.Username }}</p>
+        {{if .Links}}
+        <div class="ui segment padded gogreen-border">
+          <div class="ui grid padded">
+            <div class="sixteen wide column center aligned">
+              <h2>Check out your existing notes!</h2>
+            </div>
+            <div class="twelve wide column center aligned" style="margin: auto">
+              <div class="ui cards">
+                {{range $i, $e := .Links}}{{if lt $i 6}}
+                <a class="ui card centered center-text" href="/view/{{.}}">
+                  <div class="content">
+                    <i class="sticky note outline huge icon gogreen"></i>
+                    <div class="header card-header">{{.}}</div>
+                  </div>
+                </a>
+                {{end}}{{end}}
               </div>
-              {{ else }}
-              <div class="sixteen wide field">
-                <label for="username">Your Name</label>
-                <input
-                  type="text"
-                  id="username"
-                  name="username"
-                  maxlength="12"
-                />
-              </div>
-              {{ end }}
-            </form>
+            </div>
+            <div class="twelve wide column center aligned" style="margin: auto">
+              <a href="/" class="gogreen"><b>See all of your notes!</b></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="ui segment padded gogreen-border">
-        <div class="ui grid padded">
-          <div class="sixteen wide column center aligned">
-            <h2>Check out your existing notes!</h2>
-          </div>
-          <div class="twelve wide column">
-            {{range .Links}}
-            <p><a href="/view/{{.}}">{{.}}</a></p>
-            <!-- Add cards or something cool to display the notes. -->
-            {{end}}
+        {{else}}
+        <div class="ui segment padded gogreen-border">
+          <div class="ui grid padded">
+            <div class="sixteen wide column center aligned">
+              <h3>You have not created any notes yet!</h3>
+              <i class="frown outline icon"></i>
+              <p></p>
+              <p>Get started by following the instructions above.</p>
+            </div>
           </div>
         </div>
+        {{end}}
       </div>
-    </div>
-    {{end}}
-    <div class="ui gogreen inverted menu borderless one item">
-      <h4 class="item white-text center aligned">
-        <b>Go Notes</b>&thinsp;&thinsp;© {{ .Year }}&thinsp;&thinsp;<b
-          ><a class="footer-link" href="https://github.com/ashscodes">
-            ashscodes</a
-          ></b
-        >
-      </h4>
-    </div>
+    </main>
+    <footer class="site-footer">
+      <div class="ui gogreen inverted menu borderless one item">
+        <div class="ui container">
+          <h4 class="item center aligned">
+            <b>Go Notes</b>&thinsp;&thinsp;© {{ .Year }}&thinsp;&thinsp;<b
+              ><a class="footer-link" href="https://github.com/ashscodes">
+                ashscodes</a
+              ></b
+            >
+          </h4>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
